--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,7 @@
 }
 
 :root {
+	--text-color: #333333;
 	--arrow-back: invert(0);
 	--bg-color: #ffffff;
 	--primary-color: #626262;
@@ -71,6 +72,7 @@
 }
 
 html[data-theme="dark"] {
+	--text-color: #ffffff;
 	--arrow-back: invert(1);
 	--bg-color: #2d2f35;
 	--primary-color: #bbbbbb;
