--- a/src/components/EnterPassword/EnterPassword.scss
+++ b/src/components/EnterPassword/EnterPassword.scss
@@ -1,81 +1,34 @@
-.select {
-	&-wrapper {
-		position: fixed;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		background: linear-gradient(
-			92.91deg,
-			rgba(255, 255, 255, 0.06) 0%,
-			rgba(255, 255, 255, 0) 109.76%
-		);
-		backdrop-filter: blur(30px);
-		z-index: 10;
-		overflow: auto;
+.EnterPassword_buttons_container {
+	display: flex;
+	justify-content: center;
+	margin-top: 24px;
+}
 
-		& .loader {
-			display: flex;
-			margin: 0 auto;
-		}
+.EnterPassword_buttons {
+	justify-content: space-between;
+	flex-direction: row;
+	display: flex;
+	width: 100%;
+}
 
-		.mainblock {
-			position: fixed;
-		}
-	}
-
-	&-list {
-		margin-top: 30px;
-		//overflow: auto;
-		max-height: 450px;
-		margin-right: -32px;
-		padding-right: 26px;
-
-		/* width */
-		&::-webkit-scrollbar {
-			width: 8px;
-		}
-
-		/* Track */
-		&::-webkit-scrollbar-track {
-			background-color: var(--select-scrollbar-bg-color);
-			border-radius: 30px;
-		}
-
-		/* Handle */
-		&::-webkit-scrollbar-thumb {
-			background-color: var(--accent);
-			border-radius: 30px;
-		}
-	}
+.EnterPassword_full_width {
+	width: auto;
 }
 
 @media screen and (max-width: 1025px) {
-	.select {
-		&-wrapper {
-			.mainblock {
-				top: 50%;
-				transform: translateY(-50%);
-				max-height: fit-content;
-			}
-		}
-
-		&-list {
-			margin-right: -20px;
-			padding-right: 11px;
-		}
+	.EnterPassword_buttons {
+		justify-content: center;
+		width: 100%;
+		flex-direction: column-reverse;
 	}
-}
 
-@media screen and (max-width: 481px) {
-	.select {
-		&-list {
-			max-height: calc(100% - 100px);
-			margin-right: -20px;
-			padding-right: 12px;
+	.EnterPassword_full_width {
+		width: 100%;
+		&.margint {
+			margin-top: 6%;
+		}
+		&.marginb {
+			margin-bottom: 6%;
 		}
 	}
 }
