--- a/src/components/SendAssets/SendAssets.scss
+++ b/src/components/SendAssets/SendAssets.scss
@@ -1,7 +1,7 @@
 .recipient_wrapper {
 	height: 122px;
 	border-radius: 24px;
-	border: 1px solid black;
+	border: 1px solid var(--input-border-color);
 	margin-top: 40px;
 	padding: 20px;
 }
@@ -20,7 +20,7 @@
 	outline: 0;
 	outline-offset: 0;
 	width: 95%;
-	color: #333333;
+	color: var(--text-color);
 }
 
 .amount_wrapper {
@@ -29,7 +29,7 @@
 	font-size: 20px;
 	height: 122px;
 	border-radius: 24px;
-	border: 1px solid black;
+	border: 1px solid var(--input-border-color);
 	margin-top: 40px;
 }
 
@@ -41,7 +41,7 @@
 }
 
 .amount_input {
-	color: #626262;
+	color: var(--text-color);
 	font-weight: bold;
 	margin-top: 16px;
 	background: none;
@@ -52,6 +52,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	max-width: 100%;
 }
 
 .send_inputs {
@@ -73,10 +74,13 @@
 	margin-top: 40px;
 	display: flex;
 	justify-content: flex-end;
+	&.full_width {
+		width: 100%;
+	}
 }
 
 .amount_left_block {
-	width: 64%;
+	max-width: 50%;
 }
 
 .send_change_token {
@@ -84,7 +88,7 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-content: center;
-	width: 63%;
+	margin-left: 3%;
 }
 
 .send_max_btn {
@@ -104,7 +108,7 @@
 .send_set_token_wrap {
 	font-weight: bold;
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-end;
 
 	&.column {
 	}
@@ -125,7 +129,7 @@
 .receive_balance {
 	display: flex;
 	justify-content: flex-end;
-	color: #626262;
+	color: var(--text-color);
 	font-weight: bold;
 	font-size: 40px;
 	align-items: center;
@@ -136,6 +140,10 @@
 	align-items: center;
 	justify-content: center;
 	margin-left: 5px;
+	filter: var(--arrow-back);
+	&.nofilter {
+		filter: none;
+	}
 }
 
 .send_img_wrapper {
@@ -152,8 +160,6 @@
 }
 
 .send_token_symbol {
-	font-size: 26px;
-	font-weight: bold;
 }
 
 .amount_right_block {
@@ -208,6 +214,7 @@
 	.recipient_input {
 	}
 	.amount_left_block {
+		max-width: unset;
 		width: 100%;
 	}
 	.send_copy_address {
@@ -215,6 +222,7 @@
 	}
 	.amount_input {
 		width: 100%;
+		max-width: unset;
 	}
 	.amount_wrapper {
 		height: auto;
