Style fix Part Two

--- a/src/index.scss
+++ b/src/index.scss
@@ -276,6 +276,9 @@ input[type="number"] {
 		padding-right: 16px;
 		display: flex;
 		align-items: center;
+		&.deployAsset {
+			font-size: 30px;
+		}
 	}
 
 	&-icon {
