--- a/src/components/DeployAssetConfirmPopup/DeployAssetConfirmPopup.scss
+++ b/src/components/DeployAssetConfirmPopup/DeployAssetConfirmPopup.scss
@@ -2,3 +2,10 @@
 	display: flex;
 	flex-direction: row;
 }
+
+.DeployAssetConfirmPopup__data {
+	margin-top: 5px;
+	word-break: break-word;
+	color: var(--text-color);
+	font-weight: 500;
+}
