--- a/src/pages/Assets/Assets.scss
+++ b/src/pages/Assets/Assets.scss
@@ -14,7 +14,7 @@
 }
 
 .arrow_icons {
-	cursor: pointer;
+	cursor: inherit;
 	width: 100%;
 	height: 100%;
 }
@@ -61,6 +61,9 @@
 
 	&.copybtn {
 		position: unset;
+		img {
+			filter: var(--arrow-back);
+		}
 	}
 }
 
