--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -33,6 +33,8 @@
 		font-size: 20px;
 		padding: 15px;
 		margin-left: 30px;
+		max-height: 60px;
+		min-height: 60px;
 	}
 }
 
@@ -54,6 +56,8 @@
 
 		&-btn {
 			padding: 10px;
+			max-height: 45px;
+			min-height: 45px;
 		}
 
 		&-link {
