--- a/src/components/HeaderMore/HeaderMore.scss
+++ b/src/components/HeaderMore/HeaderMore.scss
@@ -16,7 +16,7 @@
 	}
 
 	&-dropdown {
-		padding: 20px 30px 20px 30px;
+		padding: 30px 30px 30px 30px;
 		background-color: var(--action-btn-bg);
 		box-shadow: 0 4px 14px rgba(0, 0, 0, 0.14);
 		border-radius: 18px;
@@ -25,6 +25,9 @@
 		right: 0;
 		cursor: initial;
 		z-index: 10;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
 	}
 
 	&-link {
@@ -41,6 +44,11 @@
 			color: var(--header-more-link-color);
 		}
 	}
+}
+
+.more__ver {
+	color: var(--text-color);
+	margin-top: 18px;
 }
 
 @media screen and (max-width: 1025px) {
