Provide Liquidity validate

--- a/src/components/AssetsList/AssetsList.scss
+++ b/src/components/AssetsList/AssetsList.scss
@@ -43,7 +43,7 @@
 	transform: scale(0.7);
 	//height:inherit;
 	&.wrapUnwrap {
-		width: 100px;
+		width: 50%;
 		height: 63px;
 		color: white;
 		font-size: 20px;
