--- a/src/index.scss
+++ b/src/index.scss
@@ -31,6 +31,7 @@
 	--bg-color: #ffffff;
 	--primary-color: #626262;
 	--accent: #3569f0;
+	--success: #49ec9f;
 	--accent-hover: #285bdb;
 	--error: #f03535;
 	--error-hover: #d73131;
