--- a/src/pages/Stacking/Stacking.scss
+++ b/src/pages/Stacking/Stacking.scss
@@ -3,8 +3,8 @@
 }
 
 .Staking__text {
-	font-size: 19px !important;
-	//font-size: 1.5rem !important;
+	font-size: 19px;
+
 	&.program {
 		min-width: 45%;
 		max-width: 45%;
@@ -19,6 +19,10 @@
 		min-width: 14%;
 		max-width: 14%;
 		text-align: end;
+	}
+
+	@media screen and (max-width: 400px) {
+		font-size: 15px;
 	}
 }
 
