--- a/src/components/AssetsListOrderItem/AssetsListOrderItem.module.scss
+++ b/src/components/AssetsListOrderItem/AssetsListOrderItem.module.scss
@@ -53,7 +53,7 @@
 }
 
 .header {
-	color: var(--primary-color);
+	color: var(--text-color);
 	font-size: 20px;
 	font-weight: 600;
 	line-height: normal;
@@ -71,9 +71,9 @@
 }
 
 .amount {
-	color: var(--primary-color);
+	color: var(--text-color);
 	font-size: 20px;
-	font-weight: 400;
+	font-weight: bold;
 	margin-left: auto;
 	word-break: break-all;
 
