--- a/src/components/AssetsListOrderItem/AssetsListOrderItem.module.scss
+++ b/src/components/AssetsListOrderItem/AssetsListOrderItem.module.scss
@@ -1,5 +1,5 @@
 @mixin for-phone-only {
-	@media (max-width: 350px) {
+	@media (max-width: 400px) {
 		@content;
 	}
 }
@@ -91,8 +91,15 @@
 	align-items: center;
 	padding: 0;
 	border-radius: 5px;
+	cursor: pointer;
 
 	&_first {
 		margin-right: 14px;
 	}
+}
+
+.disabled {
+	opacity: 0.5;
+	cursor: not-allowed;
+	pointer-events: none;
 }
