create pair styles fix, drafts

--- a/src/components/AssetsList/AssetsList.scss
+++ b/src/components/AssetsList/AssetsList.scss
@@ -1,3 +1,10 @@
+.fixPositionCreatePairModal{
+	margin-top:200px;
+	height:fit-content;
+
+}
+
+
 .head_wrapper {
 	display: flex;
 	justify-content: space-between;
