--- a/src/components/PoolExplorer/PoolExplorer.scss
+++ b/src/components/PoolExplorer/PoolExplorer.scss
@@ -30,7 +30,7 @@
 	&-list-pool {
 		margin-top: 30px;
 		//overflow: auto;
-		max-height: 450px;
+		//max-height: 450px;
 		margin-right: -32px;
 		padding-right: 26px;
 
