--- a/src/pages/Pool/Pool.scss
+++ b/src/pages/Pool/Pool.scss
@@ -1,7 +1,7 @@
 .pool {
 	&-wrapper {
 		text-align: center;
-		max-height: 414px;
+		//max-height: 414px;
 		overflow: auto;
 		margin-right: -32px;
 		padding-right: 26px;
