--- a/src/components/EnterSeedPhrase/EnterSeedPhrase.scss
+++ b/src/components/EnterSeedPhrase/EnterSeedPhrase.scss
@@ -9,7 +9,10 @@
 }
 
 .enterSPRegBox {
-	justify-content: space-between;
+	justify-content: center;
+	width: 320px;
+	padding-left: 16px;
+
 }
 
 .select {
