--- a/src/components/LoginViaPIN/PinPopup.scss
+++ b/src/components/LoginViaPIN/PinPopup.scss
@@ -1,22 +1,62 @@
-.gridContainer{
-  margin:auto;
-  display:grid;
-  width:60%;
+.gridContainer {
+  margin: 20px auto auto auto;
+  display: grid;
+
+  width: 60%;
   height: 300px;
   grid-template-columns: 33% 33% 33%;
   grid-template-rows: 33% 33% 33% 33%;
 }
-.gridItem{
-  height: 80px;
-  width: 80px;
+
+.gridItem {
+  height: 66px;
+  width: 66px;
   border-radius: 50%;
   margin: auto;
-  font-size: 33px;
+  font-size: 25px;
   color: #333333;
+  border: 0.5px solid #285bdb;
 }
-.numsInputContainer{
+
+.numsInputContainer {
   justify-content: space-evenly;
   display: flex;
-  width: 80%;
+  width: 66%;
   margin: auto;
+}
+
+.Nums {
+  width: 65%;
+  display: flex !important;
+  outline: none;
+  justify-content: space-evenly;
+}
+
+.pinInput {
+  border-bottom: 2px solid black;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  background-color: transparent;
+  color: black;
+  width: 60px;
+  height: 60px;
+  font-size: 60px;
+  padding-left: 20px
+}
+
+.loginViaPinBtn {
+  height: 57px;
+  font-size: 20px;
+  padding: 16px 20px;
+  border-radius: 18px;
+  width: 100%;
+}
+
+@media screen and (max-width: 390px) {
+
+  .gridContainer {
+    width: 85%;
+    height: 270px;
+  }
 }
