--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,9 +3,10 @@
 	align-items: center;
 	justify-content: space-between;
 	padding: 54px 70px;
-
+	font-weight: 500;
 	&-wrap {
 		display: flex;
+		//justify-content: space-between;
 	}
 
 	&-link {
@@ -25,7 +26,10 @@
 
 		&--active {
 			color: var(--header-link-color);
-			font-weight: 700;
+			font-weight: 500;
+
+				//text-shadow: .25px 0 .1px, -.25px 0px .1px;
+
 		}
 	}
 
