--- a/src/components/LoginViaPIN/LoginViaPin.scss
+++ b/src/components/LoginViaPIN/LoginViaPin.scss
@@ -10,7 +10,9 @@
   text-decoration: underline;
   cursor: pointer;
 }
-
+//.fixMedia {
+//  font-size:30px;
+//}
 .welcomeTextWrapper {
   width: 55%;
   text-align: center;
@@ -40,8 +42,13 @@
   margin-left: 20px;
   text-Align: left
 }
+@media screen and (max-width: 550px) {
 
-@media screen and (max-width: 390px) {
+  .fixMedia {
+    font-size: 21px !important;
+  }
+}
+@media screen and (max-width: 400px) {
   .welcomeTextWrapper {
     width: 100%;
     font-size: 16px;
@@ -53,9 +60,9 @@
     width: 121.5%;
     margin-left: -31px;
   }
-  .fixMedia {
-    font-size: 21px;
-  }
+  //.fixMedia {
+  //  font-size: 21px !important;
+  //}
   .numsInputContainer {
     width: 90%;
 
