--- a/src/components-v2/Input/index.scss
+++ b/src/components-v2/Input/index.scss
@@ -33,7 +33,8 @@
 		color: var(--icons-color);
 		font-weight: 700;
 		width: 55%;
-		margin-right: 20px;
+		flex-grow: 1;
+		margin-right: 15px;
 
 		&--zero {
 			color: var(--input-color);
@@ -67,6 +68,10 @@
 		color: #ffffff;
 		font-weight: 700;
 		cursor: pointer;
+
+		@media screen and (max-width: 769px) {
+			margin-left: 0;
+		}
 	}
 
 	&-btn {
@@ -89,7 +94,10 @@
 		align-items: center;
 		padding: 0 0 0 17px;
 		cursor: pointer;
-		margin-left: auto;
+
+		@media screen and (max-width: 769px) {
+			margin-left: auto;
+		}
 
 		span {
 			margin: 0 12px;
@@ -141,6 +149,7 @@
 		&-field {
 			width: 100%;
 			margin-bottom: 10px;
+			margin-right: 0;
 		}
 	}
 }
