fix height LoginViaPin

--- a/src/components/LoginViaPIN/LoginViaPin.scss
+++ b/src/components/LoginViaPIN/LoginViaPin.scss
@@ -4,7 +4,13 @@
 	text-align: center;
 	font-size: 28px;
 }
-
+.removePad{
+	padding: unset;
+}
+.fixPaddings{
+	margin-top: 50px;
+	margin-right: 50px;
+}
 .linkedText {
 	color: #3569f0;
 	text-decoration: underline;
@@ -17,6 +23,11 @@
 	width: 55%;
 	text-align: center;
 }
+.specForSuccess{
+	margin-top: 40px;
+	padding-left: 50px;
+	padding-right: 50px;
+}
 
 .agreementCheckBox {
 	width: 40px;
@@ -25,19 +36,16 @@
 
 .welcomeAgreementContainer {
 	display: flex;
-	width: 118.5%;
-	margin-left: -50px;
 	text-align: center;
-	height: 200px;
+	height: 20vh;
 	background: silver;
 	align-items: center;
 	justify-content: center;
-	margin-top: 50px;
-	//margin-bottom: 247px;
+	margin-top: 5vh;
 }
 
 .agreementText {
-	width: 31%;
+	width: 39%;
 	margin-left: 20px;
 	text-align: left;
 }
@@ -54,10 +62,10 @@
 	.welcomeWrapper {
 		font-size: 26px;
 	}
-	.welcomeAgreementContainer {
-		width: 121.5%;
-		margin-left: -31px;
-	}
+	//.welcomeAgreementContainer {
+	//	width: 121.5%;
+	//	margin-left: -31px;
+	//}
 	//.fixMedia {
 	//  font-size: 21px !important;
 	//}
