--- a/src/components/CloseBtn/CloseBtn.scss
+++ b/src/components/CloseBtn/CloseBtn.scss
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 1025px) {
-	.close {
-		transform: scale(0.6);
-	}
+	//.close {
+	//	transform: scale(0.6);
+	//}
 }
