--- a/src/components-v2/SelectPopup/index.module.scss
+++ b/src/components-v2/SelectPopup/index.module.scss
@@ -12,7 +12,8 @@
 		rgba(255, 255, 255, 0.06) 0%,
 		rgba(255, 255, 255, 0) 109.76%
 	);
-	backdrop-filter: blur(30px);
+	-webkit-backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
 	z-index: 10;
 	overflow: auto;
 
