--- a/src/components/RevealSeedPhrase/RevealSeedPhrase.scss
+++ b/src/components/RevealSeedPhrase/RevealSeedPhrase.scss
@@ -13,7 +13,8 @@
 //			rgba(255, 255, 255, 0.06) 0%,
 //			rgba(255, 255, 255, 0) 109.76%
 //		);
-//		backdrop-filter: blur(30px);
+//		-webkit-backdrop-filter: blur(30px);
+//      backdrop-filter: blur(30px);
 //		z-index: 100;
 //		overflow: auto;
 //
