--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -13,7 +13,8 @@
 			rgba(255, 255, 255, 0.06) 0%,
 			rgba(255, 255, 255, 0) 109.76%
 		);
-		backdrop-filter: blur(120px);
+		-webkit-backdrop-filter: blur(120px);
+        backdrop-filter: blur(120px);
 		z-index: 100;
 		overflow: auto;
 
