--- a/src/pages/LimitOrder/LimitOrder.scss
+++ b/src/pages/LimitOrder/LimitOrder.scss
@@ -16,7 +16,8 @@
 		rgba(255, 255, 255, 0.06) 0%,
 		rgba(255, 255, 255, 0) 109.76%
 	);
-	backdrop-filter: blur(100px);
+	-webkit-backdrop-filter: blur(100px);
+    backdrop-filter: blur(100px);
 	border-radius: 8px;
 	font-style: normal;
 	font-weight: bold;
