--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,9 @@
 	&-wrap {
 		display: flex;
 		//justify-content: space-between;
+		&.first {
+			flex-direction: column;
+		}
 	}
 
 	&-link {
@@ -66,7 +69,8 @@
 
 		&-link {
 			font-size: 18px;
-			margin-right: 20px;
+			//margin-right: 20px;
+			margin-right: unset;
 			margin-bottom: 5px;
 		}
 	}
