--- a/src/components/LoginViaPIN/LoginViaPin.scss
+++ b/src/components/LoginViaPIN/LoginViaPin.scss
@@ -51,8 +51,9 @@
 }
 
 .agreementCheckBox {
-	width: 40px;
-	height: 40px;
+	width: auto;
+	height: auto;
+	transform: scale(4.5);
 }
 
 .welcomeAgreementContainer {
@@ -67,8 +68,7 @@
 
 .agreementText {
 	width: 39%;
-	margin-left: 20px;
-	text-align: left;
+	margin-left: 40px;
 }
 @media screen and (max-width: 550px) {
 	.fixMedia {
@@ -99,7 +99,7 @@
 		font-size: 50px;
 	}
 	.agreementText {
-		width: 45%;
+		width: 47%;
 	}
 	.arrowImg {
 		height: 15px;
