stable preview for logic implementation

--- a/src/pages/Bridge/Bridge.scss
+++ b/src/pages/Bridge/Bridge.scss
@@ -39,3 +39,13 @@
 .bridge_netItems_container{
   margin-top:20px;
 }
+.bridge_address_wrapper{
+  display:flex;
+  align-items: center;
+  justify-content: end;
+}
+.bridge_address_img{
+  display:flex;
+  margin-left:3px;
+  align-items: center;
+}
