--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,5 @@
+
+
 .header {
 	display: flex;
 	align-items: center;
@@ -43,6 +45,11 @@
 }
 
 @media screen and (max-width: 1025px) {
+	.header__items {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
 	.header {
 		padding: 30px;
 		flex-direction: column;
