--- a/src/components/LoginViaPIN/LoginViaPin.scss
+++ b/src/components/LoginViaPIN/LoginViaPin.scss
@@ -12,7 +12,7 @@
 }
 .curBtnStylesLogin{
 	height: 57px;
-	font-size: 20px;
+	font-size: 18px;
 	//padding: 16px 20px;
 	border-radius: 18px;
 	width: 50%;
@@ -93,15 +93,39 @@
 	.numsInputContainer {
 		width: 90%;
 	}
-	.pinInput {
-		width: 50px;
-		height: 50px;
-		font-size: 50px;
-	}
+	//.pinInput {
+	//	width: 50px;
+	//	height: 50px;
+	//	font-size: 50px;
+	//}
 	.agreementText {
 		width: 45%;
 	}
 	.arrowImg {
 		height: 15px;
+	}
+}
+@media screen and (max-width: 475px) {
+
+.curBtnStylesLogin{
+	height: 42px;
+	font-size: 10px;
+	width: 60%;
+}
+}
+//@media screen and (max-width: 460px) {
+//
+//	.curBtnStylesLogin{
+//
+//		font-size: 15px;
+//
+//	}
+//}
+@media screen and (max-width: 480px) {
+	.LoginViaPinBtns{
+		justify-content: center;
+		margin-left:unset;
+		//width: 320px;
+		//padding-left: 16px;
 	}
 }
