--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,73 +1,130 @@
 .header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 54px 70px;
-	font-weight: 500;
-	&-wrap {
-		display: flex;
-		//justify-content: space-between;
-	}
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  //padding: 54px 70px;
+  font-weight: 500;
 
-	&-link {
-		display: inline-flex;
-		align-self: center;
-		margin-right: 40px;
-		user-select: none;
+  &-wrap {
+    display: flex;
+    margin-top:15px;
+    margin-left: 50px;
+    //justify-content: space-between;
+  }
 
-		&:last-of-type {
-			margin-right: 0;
-		}
+  &-link {
+    display: inline-flex;
+    align-self: center;
+    margin-right: 40px;
+    user-select: none;
 
-		&:hover {
-			color: var(--header-link-color);
-			transition: 0.3s;
-		}
+    &:last-of-type {
+      margin-right: 0;
+    }
 
-		&--active {
-			color: var(--header-link-color);
-			font-weight: 500;
+    &:hover {
+      color: var(--header-link-color);
+      transition: 0.3s;
+    }
 
-				//text-shadow: .25px 0 .1px, -.25px 0px .1px;
+    &--active {
+      color: var(--header-link-color);
+      font-weight: 500;
 
-		}
-	}
+      //text-shadow: .25px 0 .1px, -.25px 0px .1px;
 
-	&-btn {
-		font-size: 20px;
-		padding: 15px;
-		margin-left: 30px;
-		max-height: 60px;
-		min-height: 60px;
-	}
+    }
+  }
+
+  &-btn {
+    font-size: 20px;
+    padding: 15px;
+    margin-left: 30px;
+    max-height: 60px;
+    min-height: 60px;
+  }
+}
+
+.header_wrap_set {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 54px 70px;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 1025px) {
-	.header {
-		padding: 30px;
-		flex-direction: column;
+  .header {
+    padding: 30px;
+    flex-direction: column;
 
-		&-wrap {
-			display: flex;
-			margin-bottom: 15px;
-			flex-wrap: wrap;
-			justify-content: center;
+    &-wrap {
+      display: flex;
+      margin-bottom: 15px;
+      flex-wrap: wrap;
+      justify-content: center;
 
-			.btn:first-of-type {
-				margin-left: 0;
-			}
-		}
+      .btn:first-of-type {
+        margin-left: 0;
+      }
+    }
 
-		&-btn {
-			padding: 10px;
-			max-height: 45px;
-			min-height: 45px;
-		}
+    &-btn {
+      padding: 10px;
+      max-height: 45px;
+      min-height: 45px;
+    }
 
-		&-link {
-			font-size: 18px;
-			margin-right: 20px;
-			margin-bottom: 5px;
-		}
-	}
+    &-link {
+      font-size: 18px;
+      margin-right: 20px;
+      margin-bottom: 5px;
+    }
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .header {
+    flex-direction: column;
+    //padding: 33px 15px 15px;
+    display: block;
+    width: 100%;
+    margin: auto;
+    overflow: auto;
+    white-space: nowrap;
+    //margin: 30px auto auto;
+
+    &-wrap {
+      //display: flex;
+      display: block;
+      overflow: auto;
+      white-space: nowrap;
+      margin-left: unset;
+      //justify-content: space-between;
+    }
+
+    &-link {
+      display: inline-block;
+      text-align: center;
+
+      &:last-of-type {
+        margin-right: 20px;
+      }
+
+      &:first-of-type {
+        margin-left: 20px;
+      }
+    }
+  }
+
+}
+
+@media screen and (max-width: 1026px) {
+
+  .header_wrap_set {
+    flex-direction: row;
+    justify-content: end;
+    display: flex;
+    padding: unset;
+  }
 }
