--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -3,7 +3,7 @@
 	background: rgba(255, 255, 255, 0.06);
 	border: 2px solid var(--input-border-color);
 	border-radius: 24px;
-
+	margin-top: 40px;
 	&-wrapper {
 		display: flex;
 		align-items: center;
@@ -152,6 +152,10 @@
 }
 
 @media screen and (max-width: 415px) {
+	.input {
+		margin-top: unset;
+
+	}
 	.input-title span {
 		display: none;
 	}
