--- a/src/index.scss
+++ b/src/index.scss
@@ -450,7 +450,10 @@ input[type="number"] {
 	justify-content: center;
 	align-items: flex-end;
 }
+.block_title{
+	font-size:24px;
 
+}
 @media screen and (max-width: 1025px) {
 	.tipContainer {
 		bottom: 8%;
