--- a/src/pages/Assets/Assets.scss
+++ b/src/pages/Assets/Assets.scss
@@ -1,97 +1,129 @@
-.head_wrapper {
-	display: flex;
-	justify-content: space-between;
-	height: 56px;
-	position: relative;
-	font-weight: bold;
-}
+//.head_wrapper {
+//  display: flex;
+//  justify-content: space-between;
+//  height: 56px;
+//  position: relative;
+//  font-weight: bold;
+//}
 
 .action_btns {
-	font-size: 12px;
-	margin-top: 50px;
-	display: flex;
-	justify-content: space-around;
+  font-size: 12px;
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .arrow_icons {
-	cursor: inherit;
-	width: 100%;
-	height: 100%;
+  cursor: inherit;
+  width: 100%;
+  height: 100%;
 }
 
 .assets_wrapper {
-	margin-top: 30px;
-	display: flex;
-	flex-direction: column;
-	//overflow: scroll;
-	padding-right: 20px;
-	/* width: 100%; */
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  //overflow: scroll;
+  padding-right: 20px;
+  /* width: 100%; */
 }
 
 .assets_item_wrapper {
-	margin-top: 20px;
-	display: flex;
-	//height: 59px;
-	justify-content: space-between;
-	height: fit-content;
+  margin-top: 20px;
+  display: flex;
+  //height: 59px;
+  justify-content: space-between;
+  height: fit-content;
 }
 
 .assets_icons {
-	width: 24px;
-	height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .left_block {
-	display: flex;
-	align-items: center;
-	margin: auto;
-	font-size: 30px;
+  display: flex;
+  align-items: center;
+  margin: auto;
+  font-size: 30px;
 }
 
 .action_btns_bottom_text {
-	margin-top: 8px;
-	display: flex;
-	justify-content: center;
+  margin-top: 8px;
+  display: flex;
+  justify-content: center;
 }
 
 .arrow_back {
-	position: absolute;
-	height: inherit;
-	background: transparent;
+  position: absolute;
+  height: inherit;
+  background: transparent;
 
-	&.copybtn {
-		position: unset;
-		img {
-			filter: var(--arrow-back);
-		}
-	}
+  &.copybtn {
+    position: unset;
+
+    img {
+      filter: var(--arrow-back);
+    }
+  }
 }
 
 .onHover {
-	width: 54px;
-	height: 54px;
-	border-radius: 12px;
-	background: #3569f0;
-	padding: 13px;
+  width: 54px;
+  height: 54px;
+  border-radius: 12px;
+  background: #3569f0;
+  padding: 13px;
 
-	&:hover {
-		background-color: var(--accent-hover);
-	}
+  &:hover {
+    background-color: var(--accent-hover);
+  }
 }
 
 .assets_loader_wrapper {
-	display: flex;
-	justify-content: center;
-	height: 200px;
-	align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 200px;
+  align-items: center;
 }
 
 .loginInAssets {
-	display: flex;
-	justify-content: center;
-	margin-top: 80px;
-	margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+  margin-bottom: 50px;
 }
 
-@media screen and (max-width: 1025px) {
+.assets_btn_wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (max-width: 650px) {
+  .assets_item_wrapper{
+    margin-top: 5px;
+
+  }
+
+}
+
+@media screen and (max-width: 550px) {
+  .onHover {
+    width: 44px;
+    height: 44px;
+  }
+
+}
+@media screen and (max-width: 460px) {
+
+  .action_btns {
+    font-size: 11px;
+    margin-top:25px;
+  }
+
+}
+@media screen and (max-width: 480px) {
+  .left_block {
+    font-size: 22px;
+  }
 }
