--- a/src/pages/Pool/Pool.scss
+++ b/src/pages/Pool/Pool.scss
@@ -67,8 +67,9 @@
 .liquidity-btn {
 	padding: 8px 20px;
 	border-radius: 18px;
+	font-size: 20px;
+	//font-size: 20px;
 }
-
 @media screen and (max-width: 1025px) {
 	.pool {
 		&-wrapper {
