--- a/src/components/AssetsList/AssetsList.scss
+++ b/src/components/AssetsList/AssetsList.scss
@@ -53,13 +53,13 @@
 	min-width: 35px;
 	min-height: 35px;
 	display: flex;
+	color: white;
 	align-items: center;
 	justify-content: center;
 	img {
 		width: 23px;
 		filter: var(--arrow-back);
 	}
-
 }
 
 @keyframes showPopper {
