--- a/src/index.scss
+++ b/src/index.scss
@@ -242,7 +242,8 @@ input[type="number"] {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding-bottom: 250px;
+	//padding-bottom: 250px;
+	padding-bottom: 300px;
 }
 
 .logo {
