--- a/src/components-v2/LimitOrderPage/index.module.scss
+++ b/src/components-v2/LimitOrderPage/index.module.scss
@@ -10,3 +10,14 @@
 		align-items: center;
 	}
 }
+
+.set_market_btn {
+	height: 45px;
+	min-width: 179px;
+	display: flex;
+	box-shadow: 0px 14px 44px rgba(69, 88, 255, 0.23);
+	border-radius: 11px;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
