feat(MainBlock): move helperText

--- a/src/components-v2/MainBlock/index.scss
+++ b/src/components-v2/MainBlock/index.scss
@@ -1,3 +1,10 @@
+.mainblock-wrapper {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+}
+
 .mainblock {
 	user-select: none;
 	padding: 50px;
