seed phrase with backspace err fix, pinpopup width at1060 fix

--- a/src/components/LoginViaPIN/PinPopup.scss
+++ b/src/components/LoginViaPIN/PinPopup.scss
@@ -70,6 +70,13 @@
   width:100%;
   //margin-top: 20px;
 }
+@media screen and (max-width: 1060px) {
+  .gridContainer {
+  width:40vh;
+  }
+
+}
+
 @media screen and (max-width: 600px) {
 
   .gridContainer {
