--- a/src/components/LoginViaPIN/PinPopup.scss
+++ b/src/components/LoginViaPIN/PinPopup.scss
@@ -2,7 +2,7 @@
   margin: 20px auto auto auto;
   display: grid;
 
-  width: 24vh;
+  width: 40vh;
   height: 300px;
   grid-template-columns: 33% 33% 33%;
   grid-template-rows: 33% 33% 33% 33%;
@@ -70,12 +70,12 @@
   width:100%;
   //margin-top: 20px;
 }
-@media screen and (max-width: 1060px) {
-  .gridContainer {
-  width:40vh;
-  }
-
-}
+//@media screen and (max-width: 1060px) {
+//  .gridContainer {
+//  width:40vh;
+//  }
+//
+//}
 
 @media screen and (max-width: 600px) {
 
