fix styles, assets filter, draft bugs

--- a/src/components-v2/SelectItem/index.scss
+++ b/src/components-v2/SelectItem/index.scss
@@ -1,3 +1,7 @@
+.item_icon{
+	height: 54px;
+	width: 54px;
+}
 .select-item {
 	padding: 30px 0;
 	border-bottom: 1px solid var(--select-item-border-color);
