--- a/src/components/SelectItem/SelectItem.scss
+++ b/src/components/SelectItem/SelectItem.scss
@@ -29,11 +29,12 @@
 
 	&-wrapper {
 		display: flex;
+		align-items: center;
 	}
 
 	img {
-		width: 32px;
-		height: 32px;
+		width: 54px;
+		height: 54px;
 		margin-right: 12px;
 	}
 
@@ -65,6 +66,26 @@
 			font-size: 20px;
 		}
 	}
+}
+@media screen and (max-width: 321px) {
+.select-item {
+	font-size:12px;
+	&-title{
+		font-size:12px;
+	}
+	&-descr{
+		font-size:14px;
+
+	}
+	&-wrapper {
+		align-items: center;
+		font-size:12px;
+	}
+	img {
+		width:34px;
+		height:34px;
+	}
+}
 }
 
 .select-item-wrapper2 {
