--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -55,6 +55,13 @@
 
 @media screen and (max-width: 1025px) {
   .header {
+    &-wrap {
+      height:40px;
+    }
+  }
+}
+@media screen and (max-width: 1025px) {
+  .header {
     padding: 30px;
     flex-direction: column;
 
