--- a/src/components/SendAssets/SendAssets.scss
+++ b/src/components/SendAssets/SendAssets.scss
@@ -284,8 +284,9 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		height: 80px;
+		height: 100px;
 		padding: 15px;
+		margin-top:20px;
 	}
 
 	.receive_balance {
@@ -295,8 +296,9 @@
 		font-size: 16px;
 	}
 	.amount_wrapper {
-		height: 80px;
+		height: 100px;
 		padding: 15px;
+		margin-top:20px;
 	}
 	.send_inputs {
 		width: 100%;
