--- a/src/components/NativeLogin/NativeLogin.scss
+++ b/src/components/NativeLogin/NativeLogin.scss
@@ -96,3 +96,11 @@ html[data-theme="dark"] .wallet-key {
 		}
 	}
 }
+@media screen and (max-width: 321px) {
+	.wallet {
+
+		&-btn {
+			font-size: 13px;
+		}
+	}
+}
