--- a/src/index.scss
+++ b/src/index.scss
@@ -459,3 +459,8 @@ input[type="number"] {
 		bottom: 8%;
 	}
 }
+//@media screen and (max-width: 376px) {
+//	body{
+//		overflow: hidden;
+//	}
+//}
