--- a/src/components-v2/SelectItem/index.scss
+++ b/src/components-v2/SelectItem/index.scss
@@ -2,6 +2,10 @@
   height: 54px;
   width: 54px;
 }
+.item_icon_bridge {
+  height: 32px;
+  width: 32px;
+}
 .select-item {
   padding: 30px 0;
   border-bottom: 1px solid var(--select-item-border-color);
