feat: add tutorial button

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -59,7 +59,7 @@
       &.first {
         flex-direction: column;
       }
-      .btn:first-of-type {
+      .first {
         margin-left: 0;
       }
     }
