--- a/src/components/PoolExplorer/PoolExplorer.module.scss
+++ b/src/components/PoolExplorer/PoolExplorer.module.scss
@@ -1,3 +1,14 @@
+.BigMainBlock {
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 5%;
+  background-color: var(--mainblock-bg-color);
+  border: 1px solid var(--mainblock-border-color);
+}
+
 .select {
   &-wrapper {
     position: fixed;
