--- a/src/index.scss
+++ b/src/index.scss
@@ -46,6 +46,7 @@ input:focus {
   --wallet-bg-color: #ffffff;
   --wallet-border-color: #d7e0ff;
   --mainblock-bg-color: rgba(255, 255, 255, 0.6);
+  --tooltip-bg-color: rgba(255, 255, 255, 1);
   --mainblock-border-color: #eeeeee;
   --mainblock-title-color: #333333;
   --mainblock-footer-bg-color: #ffffff;
@@ -97,6 +98,7 @@ html[data-theme='dark'] {
     rgba(50, 53, 64, 1) 0%,
     rgba(56, 56, 56, 0) 100%
   );
+  --tooltip-bg-color: rgba(50, 53, 64, 1);
   --mainblock-border-color: rgba(255, 255, 255, 0.1);
   --mainblock-title-color: #ffffff;
   --mainblock-footer-bg-color: linear-gradient(
@@ -139,6 +141,79 @@ html[data-theme='dark'] {
   // transition: color .2s, background-color .2s;
 }
 
+.Tooltip {
+  padding: 5%;
+  background-color: var(--tooltip-bg-color);
+  border: 1px solid var(--mainblock-border-color);
+  box-shadow: none;
+  font-family: "Gilroy", sans-serif !important;
+  border-radius: 15px;
+  .introjs-skipbutton {
+    color: var(--accent);
+    &:hover {
+      color:  var(--accent-hover);
+    }
+  }
+  .introjs-tooltipbuttons {
+    a {
+      display: inline-block;
+      font-family: 'Gilroy', sans-serif;
+      font-weight: 700;
+      color: #ffffff;
+      font-size: 26px;
+      text-align: center;
+      text-shadow: none;
+      background-color: var(--accent);
+      border: none;
+      border-radius: 15px;
+      cursor: pointer;
+      outline: none;
+
+      &:hover {
+        background-color: var(--accent-hover);
+      }
+
+      &:focus {
+        border: none;
+      }
+
+      &-error {
+        display: inline-block;
+        font-family: 'Gilroy', sans-serif;
+        font-weight: 700;
+        color: #ffffff;
+        font-size: 26px;
+        text-align: center;
+        padding: 30px 0;
+        border: none;
+        border-radius: 30px;
+        cursor: pointer;
+        background-color: var(--error);
+
+        &:hover {
+          background-color: var(--error-hover);
+        }
+      }
+
+
+    }
+  }
+
+}
+
+.introjs-tooltipReferenceLayer * {
+  font-family: "Gilroy", sans-serif !important;
+}
+
+.introjs-disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+
+  &:hover {
+    background-color: var(--accent);
+    opacity: 0.5;
+  }
+}
 body {
   font-family: 'Gilroy', sans-serif;
   color: var(--primary-color);
