--- a/src/components/HeaderMore/HeaderMore.scss
+++ b/src/components/HeaderMore/HeaderMore.scss
@@ -47,7 +47,8 @@
 }
 
 .more__ver {
-  color: var(--text-color);
+  color: var(--header-more-link-color);
+  font-size: 15px;
   margin-top: 18px;
 }
 
