--- a/src/pages/Bridge/Bridge.scss
+++ b/src/pages/Bridge/Bridge.scss
@@ -1,3 +1,81 @@
+.bn-onboard-custom.bn-onboard-modal{
+  //background-color:black;
+  background: linear-gradient(
+                  92.91deg,
+                  rgba(255, 255, 255, 0.06) 0%,
+                  rgba(255, 255, 255, 0) 109.76%
+  );
+  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
+  z-index: 1;
+}
+.bn-onboard-custom.bn-onboard-modal-header{
+  background-color:black;
+
+}
+.bn-onboard-custom.bn-onboard-modal-content-close{
+  //height: 1.66em;
+  top: 58px;
+  right: 2.33em;
+
+}
+
+
+
+.bn-onboard-custom.bn-onboard-modal-content {
+  user-select: none;
+  padding: 50px 50px 20px 50px !important;
+  border-radius: 50px;
+  background-color: var(--mainblock-bg-color);
+  border: 1px solid var(--mainblock-border-color);
+
+  height: fit-content;
+  width: 100vh;
+  //max-height: 700px;
+  //width: 100%;
+  //max-width: 400px;
+  position: relative;
+  // margin: 0 30px;
+}
+.bn-onboard-custom.bn-onboard-modal-header {
+  //background-color:red;
+
+}
+.bn-onboard-custom.bn-onboard-modal-content-header-heading{
+  background-color:transparent;
+}
+.bn-onboard-custom.bn-onboard-select-description {
+  background-color:green;
+  display:none;
+}
+.bn-onboard-custom.bn-onboard-modal-select-wallets {
+  margin-top: 25px;
+  //background-color:transparent;
+  //width:100%;
+  //flex-flow: column !important;
+
+}
+.bn-onboard-custom.bn-onboard-icon-button {
+  //background-color:gold;
+
+}
+.bn-branding {
+display:none;
+
+}
+.bn-onboard-custom.bn-onboard-modal-selected-wallet {
+  background-color:lightslategrey;
+
+}
+.bn-onboard-custom.bn-onboard-prepare-button{
+  //background-color:saddlebrown;
+
+}
+
+.disabled{
+  opacity:0.5;
+  cursor: not-allowed;
+}
 .netContainer {
   display: flex;
   width: 75vh;
@@ -33,7 +111,7 @@
 .bridge_netSelector_wrapper {
   align-items: center;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 40px;
 }
 .bridge_netItems_container {
