--- a/src/components-v2/SelectPopup/index.module.scss
+++ b/src/components-v2/SelectPopup/index.module.scss
@@ -1,3 +1,8 @@
+.bridgeLoaderText{
+  display: flex;
+  margin-top: 35px;
+  justify-content: center;
+}
 .select-wrapper {
   position: fixed;
   top: 0;
