--- a/src/index.scss
+++ b/src/index.scss
@@ -385,7 +385,7 @@ input[type='number'] {
   &-text {
     color: var(--popup-title-color);
     margin: 0 0 16px;
-
+    padding-left: 15px;
     span {
       font-weight: 700;
       color: var(--mainblock-title-color);
