fix(onboarding): remove line

--- a/src/index.scss
+++ b/src/index.scss
@@ -153,6 +153,7 @@ html[data-theme='dark'] {
     padding: 14px 10px 7px;
   }
   .introjs-tooltipbuttons {
+    border-top: 0;
     a {
       display: inline-block;
       font-family: 'Gilroy', sans-serif;
