apply bridge mob styles

--- a/src/pages/Bridge/Bridge.scss
+++ b/src/pages/Bridge/Bridge.scss
@@ -1,3 +1,6 @@
+.fixMediaForBridge{
+  flex-direction: row !important;
+}
 .bn-onboard-custom.bn-onboard-modal{
   //background-color:black;
   background: linear-gradient(
